# pycowsay_tutorial

./: README.md  pyproject.toml
src/pycowsay_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
